k8s/apps/immich/base/immich.yaml
# IMMICH NAMESPACE ================================= immich ==
apiVersion: v1
kind: Namespace
metadata:
  name: immich
---
# IMMICH INGRESS =============================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
spec:
  tls:
    - hosts:
        - $DOMAIN
  rules:
    - host: $DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ENV-immich-server # use correct name in kustomization
                port:
                  number: 2283
