k8s/apps/immich/base/ingress.yaml
## NOT USED YET, is it needed?
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
  annotations:
    cert-manager.io/cluster-issuer: ${CERT_ISSUER_PROD}
spec:
  tls:
    - hosts:
        - pix.${CRUXLI_HOST}
      secretName: immich-tls
  rules:
    - host: pix.${CRUXLI_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ENV-immich-server # use correct name in kustomization
                port:
                  number: 2283
